# Kapowarr

./: .dockerignore  .gitignore  .isort.cfg  .pep8  .pre-commit-config.yaml  .zipignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.amd64  Kapowarr.py  README.md  docker-compose.yml  dockerfile.debian  docs-requirements.txt  entrypoint.sh  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  3_contribute_request.yml  bug_report.md  config.yml  contribute_request.md  feature_request.md
api/: index.html
backend/: blocklist.py  comicvine.py  conversion.py  converters.py  credentials.py  custom_exceptions.py  db.py  db_migration.py  definitions.py  download.py  download_clients.py  download_direct_clients.py  download_general.py  download_queue.py  download_torrent_clients.py  enums.py  file_extraction.py  files.py  flaresolverr.py  getcomics.py  helpers.py  library_import.py  logging.py  mass_edit.py  matching.py  naming.py  post_processing.py  root_folders.py  search.py  server.py  settings.py  tasks.py  volumes.py  websockets.py
docs/: faq.md  index.md  installation.md  mkdocs.yml  rate_limiting.md  requirements-docs.txt  settings.md  setup_after_installation.md
faq/: index.html
frontend/: api.py  test.html  ui.py
installation/: index.html
library-import/: index.html
project_management/: docs-requirements.txt  mkdocs.yml
rate_limiting/: index.html
search/: search_index.json
settings/: index.html
setup_after_installation/: index.html
(+184 files in other folders)
